[gd_scene load_steps=7 format=3 uid="uid://dbe2ae0buv5cu"]

[ext_resource type="Texture2D" uid="uid://du5eohjqajh61" path="res://gfx/interface/overlays/BtnDefault.png" id="1_iv7aq"]
[ext_resource type="Texture2D" uid="uid://bxyw40npe08pt" path="res://gfx/interface/overlays/BtnDefaultPressed.png" id="2_fobsx"]
[ext_resource type="Texture2D" uid="uid://dkr8pjqnucfv" path="res://gfx/interface/overlays/BtnDefaultHover.png" id="3_yx0e8"]
[ext_resource type="Texture2D" uid="uid://bfdfuv51e64ww" path="res://gfx/map-objects/ForestryBuilding.png" id="4_75kvj"]
[ext_resource type="Script" path="res://interface/buildings/TransportRouteCard.gd" id="4_fel0g"]
[ext_resource type="Script" path="res://interface/core/DynamicResourceInfo.gd" id="6_3fawa"]

[node name="TransportRouteCard" type="TextureButton"]
custom_minimum_size = Vector2(0, 100)
offset_right = 561.0
offset_bottom = 100.0
texture_normal = ExtResource("1_iv7aq")
texture_pressed = ExtResource("2_fobsx")
texture_hover = ExtResource("3_yx0e8")
stretch_mode = 0
script = ExtResource("4_fel0g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_75kvj")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="DestinationLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Transport Route to"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 6
selected = 1
allow_reselect = true
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Level 1"
popup/item_1/id = 1
popup/item_2/text = "Level 2"
popup/item_2/id = 2
popup/item_3/text = "Level 3"
popup/item_3/id = 3
popup/item_4/text = "Level 4"
popup/item_4/id = 4
popup/item_5/text = "Level 5"
popup/item_5/id = 5

[node name="TransportedResources" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_3fawa")
